[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Popup.gd" type="Script" id=2]
[ext_resource path="res://fonts/Oswald-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_color = Color( 0.933333, 0.882353, 0.811765, 1 )
extra_spacing_bottom = 4
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.345098, 0.254902, 0.411765, 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_color = Color( 0.933333, 0.882353, 0.811765, 1 )
extra_spacing_bottom = 4
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.345098, 0.254902, 0.411765, 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_color = Color( 0.933333, 0.882353, 0.811765, 1 )
extra_spacing_bottom = 4
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.345098, 0.254902, 0.411765, 1 )

[node name="Popup1" type="WindowDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -608.0
margin_right = -752.0
margin_bottom = -312.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 672.0
margin_bottom = 280.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 656.0
margin_bottom = 165.0
rect_min_size = Vector2( 0, 165 )
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 656.0
margin_bottom = 226.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 157.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 6
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Continue"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 165.0
margin_bottom = 57.0

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 169.0
margin_right = 326.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Retry"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 330.0
margin_right = 334.0
margin_bottom = 57.0

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 495.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Quit"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 656.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Use Input"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 656.0
margin_bottom = 264.0
align = 1
placeholder_text = "Input corrected thing here!"
caret_blink = true
caret_blink_speed = 0.28

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
